# bist-lob-analysis

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  THYAO_Spot_vs_Futures_Analysis.csv  analyze.py  dashboard.py  report_AKBNK_spot_vs_futures.csv  report_ASELS_spot_vs_futures.csv  report_BIMAS_spot_vs_futures.csv  report_EREGL_spot_vs_futures.csv  report_GARAN_spot_vs_futures.csv  report_ISCTR_spot_vs_futures.csv  report_KCHOL_spot_vs_futures.csv  report_PGSUS_spot_vs_futures.csv  report_THYAO_spot_vs_futures.csv  report_TUPRS_spot_vs_futures.csv  requirements.txt
config/: symbol_pairs.json
db_data/: postmaster.opts  postmaster.pid
db_data/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2840_fsm  2840_vm  2841
db_data/base/16384/: 1247  1247_fsm  1249  1249_fsm  1255  1259  1259_fsm  1259_vm  15048  16390  16390_fsm  16390_vm  16394  16395  16395_fsm  16395_vm  16403  16405  16406_fsm  16406_vm  16415  16417  16418  2224  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  (+17 more)
db_data/base/4/: 15048  2619
db_data/global/: 1214  1232  1233  1260  1260_vm  1262  2671  2672  2676  2677  config_exec_params  pg_control  pg_internal.init
db_data/pg_xact/: 0000
scripts/: analyze_pairs.py  check_and_create_db.py  find_add_orders.py  find_messages.py  find_offset.py  probe_pcap.py  setup_db.py
sql/: schema.sql
src/cpp/: DatabaseManager.hpp  itch_messages.h  itch_parser.h  main.cpp  order_book.h  pcap_reader.h
